Add support for Java 17